--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "onevoice-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch server.js",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
