complete assembly ai in the backend - this handles http request wwith express, manages the connection through websocket, handles ai api connection, and forwards audio to assembly ai and transcripts back to client

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
-    "typescript": "^5.8.2"
+    "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
